# judges

./: .all-contributorsrc  .gitignore  LICENSE  README.md  autojudge-user-prompt-2025-03-15-00-22-07.txt  cli.py  conftest.py  pyproject.toml
.github/workflows/: run-tests.yaml
cookbooks/data/: natural-qa-random-67-with-AI-search-answers-evaluated-judges.csv  save_to_repo.py
cookbooks/hf/: Quotient_|_judges_HF_Cookbook.ipynb  test_judges.py
examples/: autojudge.py  basic.py  evaluating-ai-search-engines.ipynb  judge_coverage.py  jury.py
judges/: __init__.py  _client.py  _models.py  base.py  config.py
judges/autojudge/: README.md  __init__.py  core.py  metrics.py  prompts.py  test_core.py
judges/autojudge/engine/: llm_engine.py
judges/autojudge/metrics/: compute_metrics.py
judges/autojudge/notebooks/: tutorial_notebook.ipynb
judges/autojudge/outputs/grading_notes/: grading_note_iteration_1.txt
judges/autojudge/prompts/: GENERATE_GRADING_NOTE.txt  GRADING_NOTE_FORMAT.txt  STRUCTURE_FEEDBACK.txt
judges/autojudge/tests/data/: synthetic_travel_qa.csv
judges/autojudge/tests/notebooks/: test.ipynb
judges/classifiers/: __init__.py  correctness.py
judges/classifiers/auto/: README.md  core.py
judges/cli/: entrypoint.py
judges/cookbooks/data/: quotient_natural_qa_with_AI_search_completions.csv
judges/graders/: correctness.py  empathy.py  hypoeval.py  information_coverage.py  moderator.py  quality.py  query_quality.py  refusal_detection.py  relevance.py  relevancy.py  response_quality.py  story_quality.py  summary_quality.py
tests/: sample_script.py  test_judges.py
