[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "judges"
version = "0.0.3"
authors = [
    {name = "Freddie Vargus", email = "freddie@quotientai.co"},
    {name = "James Liounis", email = "james@quotientai.co"},
]
description = "A small library for off-the-shelf LLMs as judges."
dependencies = [
    "openai == 1.54.5",
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "large language models", "llm-judge", "evaluation", "evals"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]


[project.optional-dependencies]
dev = [
    "openai-responses==0.11.2",
]


[tool.setuptools.packages.find]
include = ["judges*"]
exclude = ["tests*"]

