[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "judges"
version = "0.0.11"
authors = [
    {name = "Freddie Vargus", email = "freddie@quotientai.co"},
]
description = "A small library of research-backed LLM judges"
dependencies = [
    "openai >= 1.57.4",
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "large language models", "llm-judge", "evaluation", "evals"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]


[project.optional-dependencies]
litellm = [
    "litellm>=1.55.3",
]
auto = [
    "instructor==1.7.0",
    "pydantic==2.10.3",
    "tenacity==9.0.0",
]
dev = [
    "openai-responses>=0.11.2",
]

[tool.setuptools.packages.find]
include = ["judges*"]
exclude = ["tests*"]

