[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "judges"
version = "0.1.1"
authors = [
    {name = "Freddie Vargus", email = "freddie@quotientai.co"},
]
description = "A small library of research-backed LLM judges"
dependencies = [
    "instructor>=1.8.2",
    "pydantic>=2.10.3",
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "large language models", "llm-judge", "evaluation", "evals"]
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
judges = "judges.cli.entrypoint:app"

[project.optional-dependencies]
dev = [
    "openai-responses>=0.11.2",
]

[tool.setuptools.packages.find]
include = ["judges*"]
exclude = ["tests*"]

